# Mehendi_Design

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/softdesk/mehendidesign/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/softdesk/mehendidesign/adapters/: CategoryAdapter.java  FullViewAdapter.java  ImageAdapter.java
app/src/main/java/com/softdesk/mehendidesign/data/: MockDatabase.java
app/src/main/res/anim/: item_fall_down.xml  slide_out_left.xml
app/src/main/res/color/: nav_item_colors.xml
app/src/main/res/drawable/: bg_black_gradient.xml  bg_nav_header.xml  bg_nav_item_selection.xml  bg_rounded_nav.xml  bg_splash_gradient.xml  circle_shape.xml  ic_arrow_back.xml  ic_drawer_home.xml  ic_drawer_privacy.xml  ic_drawer_report.xml  ic_nav_category.xml  ic_nav_fav.xml  ic_nav_home.xml  ic_nav_saved.xml
app/src/main/res/layout/: activity_full_view.xml  activity_gallery.xml  activity_main.xml  activity_splash.xml  item_category_card.xml  item_full_view.xml  layout_item_category.xml  layout_item_feed.xml  layout_item_gallery.xml  layout_item_square.xml  nav_header.xml  placeholder_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml  drawer_menu.xml  main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/softdesk/mehendidesign/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
